fixed nav sections to align with h1

--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -10,7 +10,11 @@ body {
 
 header {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
+    padding: 20px;
     font-size: 20px;
+    overflow: hidden;
 }
 
 h1 {
@@ -18,18 +22,14 @@ h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #ffffff;
     background-color: #2a607c;
+    float: left;
 }
 
 .seo {
     color: #d9dcd6;
 }
 
-nav ul {
-    list-style-type: none;
-    display: inline-block;
-}
-
-nav ul li {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -37,13 +37,23 @@ nav ul li {
     font-size: 20px;
 }
 
+nav ul {
+    list-style-type: none;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-left: 25px;
+}
+
 li a {
     color: #ffffff;
     text-decoration: none;
-    padding: 20px;
-    background-color: #2a607c;
 }
 
+p {
+    font-size: 16px;
+}
 
 .hero {
     height: 800px;
